--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Obys Agency Clone</title>
-    <link rel="shortcut icon" href="/assets/favicon-32x32.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/asset2/favicon-32x32.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
@@ -95,7 +95,7 @@
                 <div class="hero" id="hero1">
                     <h1>Experience</h1>
                 </div>
-                <img id="flag" src="/assets/Flag.jpg" alt="flag">
+                <img id="flag" src="/asset2/Flag.webp" alt="flag">
             </div>
         </div>
         <div id="page2" data-scroll>
@@ -113,8 +113,8 @@
                 <div class="project">
                     <h1>olga prudka</h1>
                     <div class="image-div d1">
-                        <img src="/assets/img1-1.jpg" alt="img">
-                        <img src="/assets/img1-2.jpg" alt="img">
+                        <img src="/asset2/img1-1.webp" alt="img">
+                        <img src="/asset2/img1-2.webp" alt="img">
                     </div>
                     <div class="ptext">
                         <p>Logo design, Website <br> design, Development</p>
@@ -124,8 +124,8 @@
                 <div class="project">
                     <h1>ochi</h1>
                     <div class="image-div d2">
-                        <img src="/assets/img2-1.jpg" alt="img">
-                        <img src="/assets/img2-2.jpg" alt="img">
+                        <img src="/asset2/img2-1.webp" alt="img">
+                        <img src="/asset2/img2-2.webp" alt="img">
                     </div>
                     <div class="ptext">
                         <p>Logo design, Website <br> design, Development</p>
@@ -155,8 +155,8 @@
                 <div class="project p3">
                     <h1>porshce</h1>
                     <div class="image-div d3">
-                        <img src="/assets/img3-1.jpg" alt="img">
-                        <img src="/assets/img3-2.jpg" alt="img">
+                        <img src="/asset2/img3-1.webp" alt="img">
+                        <img src="/asset2/img3-2.webp" alt="img">
                     </div>
                     <div class="ptext">
                         <p>Logo design, Website <br> design, Development</p>
@@ -166,8 +166,8 @@
                 <div class="project p4">
                     <h1>david laxer</h1>
                     <div class="image-div d4">
-                        <img src="/assets/img4-1.jpg" alt="img">
-                        <img src="/assets/img4-2.jpg" alt="img">
+                        <img src="/asset2/img4-1.webp" alt="img">
+                        <img src="/asset2/img4-2.webp" alt="img">
                     </div>
                     <div class="ptext">
                         <p>Logo design, Website <br> design, Development</p>
@@ -191,7 +191,7 @@
                     celebrate together.
                 </p>
                 <div id="page4-flex">
-                    <img src="/assets/team.jpg" alt="img">
+                    <img src="/asset2/team.webp" alt="img">
                     <p>We are happy to present our new website and updated version of Obys agency. As before we are open
                         for new projects worldwide! <br><br>
                         Would you like to have award winning site or unique branding style, please say hi to our manager
